hphp/hack/test/typecheck/expression_trees/generic_visitor.php.exp
ERROR: File "generic_visitor.php", line 7, characters 18-18:
A semicolon `;` is expected here. (Parsing[1002])
ERROR: File "generic_visitor.php", line 7, characters 18-20:
Expression trees must provide the DSL name. (Parsing[1002])
ERROR: File "generic_visitor.php", line 7, characters 3-12:
Unbound name: `ExampleDsl` (a global function) (Naming[2049])
ERROR: File "generic_visitor.php", line 7, characters 18-18:
Unbound name: `MISSING_DSL` (Naming[2049])
ERROR: File "generic_visitor.php", line 7, characters 18-18:
Unbound name: `MISSING_DSL` (an object type) (Naming[2049])
ERROR: File "generic_visitor.php", line 7, characters 19-19:
Unbound name: `MISSING_DSL` (an object type) (Naming[2049])
ERROR: File "generic_visitor.php", line 7, characters 3-12:
Unbound name (typing): `ExampleDsl` (Typing[4107])
